resolve PR comments